# accipere

./: .gitignore  Cargo.toml  README.md  accipere.cabal  flake.nix
.github/workflows/: check.yml
exe/: Main.hs
src/: Accipere.hs  cpu.rs  gpu.rs  main.rs  net.rs  os.rs  ram.rs
src/Accipere/: CPU.hs  FileSystem.hs  GPU.hs  Misc.hs  Networking.hs  RAM.hs
