cabal-version:                3.8
name:               accipere
version:            0.1.0.0
synopsis:           An alternative to fastfetch, written in Haskell.
homepage:           https://github.com/sh-koh/accipere
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             sh-koh
maintainer:         70974710+sh-koh@users.noreply.github.com
build-type:         Simple

common warnings
    ghc-options: -Wall
    default-extensions:
      OverloadedStrings
      NamedFieldPuns
      RecordWildCards
      -- OrPatterns
      OverloadedRecordDot
      QuasiQuotes
      -- MultilineStrings

library
    import:           warnings
    exposed-modules:
      Accipere
      Accipere.CPU
      Accipere.GPU
      Accipere.RAM
      Accipere.FileSystem
      Accipere.Networking
      Accipere.Misc

    build-depends:
      base ^>=4.19.2.0
    hs-source-dirs:   src
    default-language: GHC2021

executable accipere
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    build-depends:
        base ^>=4.19.2.0,
        accipere

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite accipere-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        accipere
